--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,14 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body
+    style="
+      margin: 0;
+      padding: 0;
+      font-family: 'Montserrat', sans-serif;
+      color: #293677;
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
