--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     style="
       margin: 0;
       padding: 0;
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Montserrat', sans-serif !important;
       color: #293677;
     "
   >
